--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,10 @@ ext.hibernateAnnotationVersion = "5.0.4.Final" // Matches the Hibernate version 
 
 // Library Hibernate Reverse Engineer
 ext.hibernateToolsVersion = "5.3.7.Final" // Used only to Reverse Engineer Database to Java POJOs
-ext.hibernateRevEngVersion = "5.1.10.Final" // Used only to Reverse Engineer Database to Java POJOs
-ext.hibernateToolsRevEngVersion = "5.2.6.Final"  // Used only to Reverse Engineer Database to Java POJOs
+//ext.hibernateRevEngVersion = "5.1.10.Final" // Used only to Reverse Engineer Database to Java POJOs
+//ext.hibernateToolsRevEngVersion = "5.2.6.Final"  // Used only to Reverse Engineer Database to Java POJOs
+ext.hibernateRevEngVersion = "5.3.7.Final" // Used only to Reverse Engineer Database to Java POJOs
+ext.hibernateToolsRevEngVersion = "5.4.1.Final"  // Used only to Reverse Engineer Database to Java POJOs
 
 // Library GIS
 ext.geolatteVersion = "1.3.0" // Matches the Hibernate version in Wildfly 15.0.1 -- manually added by drg
@@ -188,7 +190,6 @@ dependencies {
     
     // WildFly / Java EE
     providedCompile "javax:javaee-api:${javaEeVersion}"
-    //providedCompile "javax.security.enterprise:javax.security.enterprise-api:1.0"
     providedCompile "org.wildfly:wildfly-spec-api:${wildflyVersion}"
 
     // PrimeFaces Core and Themes
