--- a/cargo.gradle
+++ b/cargo.gradle
@@ -22,11 +22,11 @@ task determineEnv {
 cargo {
 
 
-    containerId = 'wildfly14x'
+    containerId = 'wildfly15x'
     port = 9990
 
     remote {
-        containerId = 'wildfly14x'
+        containerId = 'wildfly15x'
         port = 9990
         hostname = 'localhost'
         username = 'wildfly'
@@ -36,7 +36,7 @@ cargo {
     local {
         homeDir = file('/home/' + System.getProperty("user.name").toLowerCase().trim() + '/bin/wildfly')
         outputFile = file('build/output.log')
-        timeout = 60000
+        //timeout = 60000
 
         containerProperties {
             property 'cargo.tomcat.ajp.port', 9990
