--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,11 @@
         <welcome-file>page/index.xhtml</welcome-file>
     </welcome-file-list>
 
-
+    <!-- Error Pages -->
+    <error-page>
+        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+        <location>/page/index.xhtml</location>
+    </error-page>
 
     <!-- Session Configuration -->
     <session-config>
@@ -89,7 +93,7 @@
     <!-- Web Login Configuration Works with WildFly Security Realm -->
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>moldDomain</realm-name>
+        <realm-name>jaspitest</realm-name>
         <form-login-config>
             <form-login-page>/login.xhtml</form-login-page>
             <form-error-page>/login.xhtml</form-error-page>
